// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ProgressBar component renders the blue variant correctly 1`] = `
<div
  class=""
  data-testid="progress-component"
>
  <label
    class="block mb-3 text-2xl font-bold text-center md:mb-8 text-magenta-500 md:text-4xl"
    for="progress"
  >
    30% complete
  </label>
  <progress
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="30"
    class="w-full border-1 bg-white border-gray-650 rounded-full h-[16px] overflow-hidden [&::-webkit-progress-bar]:bg-gray-150 [&::-webkit-progress-value]:rounded-full [&::-moz-progress-bar]:rounded-full [&::-webkit-progress-value]:bg-blue-700 [&::-moz-progress-bar]:bg-blue-700"
    id="progress"
    max="100"
    value="30"
  />
</div>
`;

exports[`ProgressBar component renders the default correctly 1`] = `
<div
  class=""
  data-testid="progress"
>
  <label
    class="block mb-3 text-2xl font-bold text-center md:mb-8 text-magenta-500 md:text-4xl"
    for="progress"
  >
    30% complete
  </label>
  <progress
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="30"
    class="w-full border-1 bg-white border-gray-650 rounded-full h-[16px] overflow-hidden [&::-webkit-progress-bar]:bg-gray-150 [&::-webkit-progress-value]:rounded-full [&::-moz-progress-bar]:rounded-full [&::-webkit-progress-value]:bg-magenta-500 [&::-moz-progress-bar]:bg-magenta-500"
    id="progress"
    max="100"
    value="30"
  />
</div>
`;
